# instrumentation2

./: .gitignore  README.md  dune-project  instrumentation2.opam
.github/workflows/: build.yml
lib/: dune  run.ml  vuln.ml  vuln_ast.ml  vuln_ast.mli
src/: dune  main.ml  result.ml  run.ml  run.mli  syntax.ml  value.ml  vuln.ml  vuln.mli  vuln_ast.mli  vuln_literal.ml  vuln_parser.ml  vuln_parser.mli  vuln_symbolic.ml
test/: dune  test_toy.t  test_unit.t
test/examples/54/: normalized.js  taint_summary-fixed.json  taint_summary.json
test/toy/: dune  example-20.js  example-20.json  test_toy.t  vfunretbyexport.json
