(library
 (public_name instrumentation2)
 (name i2)
 (modules
  run
  syntax
  vuln
  vuln_intf
  vuln_parser
  vuln_symbolic
  vuln_literal
  result)
 (libraries yojson bos bos.setup))

(executable
 (public_name instrumentation2)
 (name main)
 (modules main)
 (libraries cmdliner i2)
 (instrumentation
  (backend bisect_ppx)))
